# formatron

./: .gitattributes  .gitignore  .readthedocs.yaml  Doxyfile  LICENSE  README.md  __init__.py  dev-dependencies.txt  formatter.py  index.html  matcher.py  py_filter.bat  py_filter.sh  pyproject.toml
benchmarks/: address.json  exllamav2_json.py  exllamav2_json.txt  json.py  linkedlist.json  orders.json  readme.md  result.md  transformers_json.py  transformers_json.txt  utils.py  vllm_json.py  vllm_json_bench.txt
dev/: RWKV_8py.html  RWKV_8py_source.html  ____init_____8py.html  ____init_____8py_source.html  __utils_8py.html  __utils_8py.js  __utils_8py_source.html  annotated.html  annotated_dup.js  classes.html  classformatron_1_1config_1_1EngineGenerationConfig-members.html  classformatron_1_1config_1_1EngineGenerationConfig.html  classformatron_1_1extractor_1_1ChoiceExtractor-members.html  classformatron_1_1extractor_1_1ChoiceExtractor.html  classformatron_1_1extractor_1_1ChoiceExtractor.js  classformatron_1_1extractor_1_1Extractor-members.html  classformatron_1_1extractor_1_1Extractor.html  classformatron_1_1extractor_1_1Extractor.js  classformatron_1_1extractor_1_1LiteralExtractor-members.html  classformatron_1_1extractor_1_1LiteralExtractor.html  classformatron_1_1extractor_1_1LiteralExtractor.js  classformatron_1_1extractor_1_1NonterminalExtractor-members.html  classformatron_1_1extractor_1_1NonterminalExtractor.html  classformatron_1_1extractor_1_1RegexExtractor-members.html  classformatron_1_1extractor_1_1RegexExtractor.html  classformatron_1_1extractor_1_1RegexExtractor.js  classformatron_1_1extractor_1_1SubstringExtractor-members.html  classformatron_1_1extractor_1_1SubstringExtractor.html  classformatron_1_1formats_1_1json_1_1JsonExtractor-members.html  classformatron_1_1formats_1_1json_1_1JsonExtractor.html  classformatron_1_1formats_1_1json_1_1JsonExtractor.js  classformatron_1_1formats_1_1regex_1_1RegexComplementExtractor-members.html  classformatron_1_1formats_1_1regex_1_1RegexComplementExtractor.html  classformatron_1_1formats_1_1regex_1_1RegexExtractor-members.html  classformatron_1_1formats_1_1regex_1_1RegexExtractor.html  classformatron_1_1formats_1_1regex_1_1RegexExtractor.js  classformatron_1_1formatter_1_1Formatter-members.html  classformatron_1_1formatter_1_1Formatter.html  classformatron_1_1formatter_1_1Formatter.js  classformatron_1_1formatter_1_1FormatterBase-members.html  (+246 more)
docs/: Makefile  conf.py  header_gen.py  header_gen.sh  index.rst  index_gen.py
examples/: test_readme_examples.py
grammar_generators/: grammar_generator.py  json_generator.py
integrations/: RWKV.py
schemas/: dict_inference.py  pydantic.py  schema.py
tests/: scratch.py  test_exllamav2_integration.py  test_formatter.py  test_grammar_gen.py  test_rwkv_integration.py  test_transformers_integration.py  test_vllm_integration.py
v0.1.1/: RWKV_8py.html  RWKV_8py_source.html  ____init_____8py.html  ____init_____8py_source.html  __utils_8py.html  __utils_8py_source.html  annotated.html  classes.html  classformatron_1_1config_1_1EngineGenerationConfig-members.html  classformatron_1_1config_1_1EngineGenerationConfig.html  classformatron_1_1extractor_1_1ChoiceExtractor-members.html  classformatron_1_1extractor_1_1ChoiceExtractor.html  classformatron_1_1extractor_1_1ChoiceExtractor.js  classformatron_1_1extractor_1_1Extractor-members.html  classformatron_1_1extractor_1_1Extractor.html  classformatron_1_1extractor_1_1LiteralExtractor-members.html  classformatron_1_1extractor_1_1LiteralExtractor.html  classformatron_1_1extractor_1_1RegexExtractor-members.html  classformatron_1_1extractor_1_1RegexExtractor.html  classformatron_1_1formatter_1_1Formatter-members.html  classformatron_1_1formatter_1_1Formatter.html  classformatron_1_1formatter_1_1FormatterBase-members.html  (+96 more)
v0.1.2/: RWKV_8py.html  (+115 more)
(+2476 files in other folders)
