[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "formatron"
version = "0.1.0"
authors = [
  {name = "Xintong Sun", email = "xs28@rice.edu"},
]
description = "Formatron empowers everyone to control the output format of language models with minimal overhead."
readme = "README.md"
dependencies = ["pydantic","kbnf"]
license = {file = "LICENSE"}
keywords = ["deep learning", "language model", "guided generation", "structured generation","constrained decoding"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Programming Language :: Python :: Implementation :: CPython",
]
[project.optional-dependencies]
rwkv = ["rwkv"]
transformers = ["transformers"]
exllamav2 = ["exllamav2"]
[project.urls]
Repository = "https://github.com/Dan-wanna-M/formatron"
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "./src/formatron",
]