[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "formatron"
version = "0.4.6"
authors = [
  {name = "Xintong Sun", email = "xs28@rice.edu"},
]
description = "Formatron empowers everyone to control the output format of language models with minimal overhead."
readme = "README.md"
dependencies = ["pydantic>=2,<3","kbnf>=0.3.10,<0.4.0", "general-sam>=1,<2", "jsonschema>=4,<5", "frozendict>=2,<3"]
license = {file = "LICENSE"}
keywords = ["deep learning", "language model", "guided generation", "structured generation","constrained decoding"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Programming Language :: Python :: Implementation :: CPython",
]
[project.optional-dependencies]
rwkv = ["rwkv>=0.7.4,<0.9.0"]
transformers = ["transformers>=4,<5"]
exllamav2 = ["exllamav2>=0.0.17,<0.3.0"]
vllm = ["vllm>=0.2.2,<0.7.0"]
[project.urls]
Repository = "https://github.com/Dan-wanna-M/formatron"
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]